--- a/IEMP_Satellite/templates/console.html
+++ b/IEMP_Satellite/templates/console.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="assets/xterm/xterm.css" />
     <script src="assets/xterm/xterm.js"></script>
     <script src="assets/xterm/xterm-addon-fit.js"></script>
+    <script src="assets/js/console.js"></script>
+
 
 </head>
 
@@ -23,59 +25,11 @@
 <div id="terminal" style="width: 100%;height: 100%"></div>
 
 </body>
-<script>
-    let term = new Terminal();
-    let fitAddon = new FitAddon.FitAddon();
-    let OPSystem = 1;
-    term.loadAddon(fitAddon);
-    let ws = new WebSocket("ws://" + document.domain + ":48285/consolews/?EID="+getQueryString("EID"));
-    console.log(ws);
 
-    term.open(document.getElementById('terminal'));
-    fitAddon.fit();
-    term.write("")
-
-     term.onKey(e => {
-         ws.send(e.key);
-         //如果为退格键
-         if (OPSystem === 0) {
-             if(e.key === '\x7F') {
-                 term.write('\b \b');
-
-             }else if(e.key === "\x03"){
-
-             }
-             else{
-                 term.write(e.key);
-             }
-         }
-
-
-
-     })
-
-    function getQueryString(name) {
-        var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)", "i");
-        var r = window.location.search.substr(1).match(reg);
-        if (r != null) return unescape(r[2]);
-        return null;
-    }
-
-    ws.onmessage = async function (evt) {
-        //blob转换成字符串
-
-        if (typeof(evt.data)=== "string"){//指令
-            let Order = JSON.parse(evt.data);
-            OPSystem = Order.OPSystem;
-        }else if (typeof(evt.data) === "object"){//写入控制台
-            let str = await evt.data.text();
-            term.write(str);
-        }
-
-
-    };
-    
-</script>
 </html>
+<script>
+    OpenConsole(getQueryString("EID"));
+</script>
+
 
 
